<resources>
    <string name="kitten_care">Kitten Care</string>
    <string name="default_name">Kitten</string>
    <string name="status_message_scroll">Scroll down and play the mini games!</string>
    <string name="status_message_did_you_know">Did you know?</string>
    <string name="notification_contents_title">%s is exploring!</string>
    <string name="notification_escape">Forced Escape Device</string>
    <string name="button_show">SHOW Kitten</string>
    <string name="button_show_hide">SHOW/HIDE %s</string>
    <string name="button_item_costume_advertisement">Watch an ad and get an item or costume!</string>
    <string name="button_ticket_advertisement">Watch an ad and get a ticket!</string>
    <string name="button_sure">Sure!</string>
    <string name="button_again">Try Again!</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_message_overlay">Enable Screen Overlay for exploration of the kitten!</string>
    <string name="dialog_message_complete_tutorial">You can see the tutorial again in settings!</string>
    <string name="dialog_message_escape">Are you trying to operate a forced escape device?!</string>
    <string name="dialog_message_rename">Would you rename the kitten?</string>
    <string name="dialog_message_skip_tutorial">Do you want to skip the tutorial?</string>
    <string name="dialog_message_finish">Do you want to finish the mini game?</string>
    <string name="dialog_message_skip_opening">Do you want to skip the opening?</string>
    <string name="dialog_message_fast_opening">Do you want to fast-forward the opening?</string>
    <string name="dialog_message_ticket">Would you watch an ad to charge a ticket?</string>
    <string name="dialog_message_win_ttakji">Win the slapping ttakji!</string>
    <string name="dialog_message_move_destination">Move to the destination without being caught!</string>
    <string name="dialog_message_chase">Go after the sunflower without falling!</string>
    <string name="dialog_message_happiness">Would you like to check the description of newly added Happiness?</string>
    <string name="dialog_message_complete_happiness_tutorial">You can check the description anytime in settings!</string>
    <string name="menu_title_filter_history">History to Display</string>
    <string name="menu_title_filter_items">Item to Display</string>
    <string name="menu_title_all">All</string>
    <string name="menu_title_items">Item</string>
    <string name="menu_title_costumes">Costume</string>
    <string name="menu_title_state">State</string>
    <string name="menu_title_consumption">Consumption</string>
    <string name="menu_title_charm">Charm</string>
    <string name="menu_title_toy">Toy</string>
    <string name="menu_title_skip_opening">Skip Opening</string>
    <string name="menu_title_select_difficulty">Select Difficulty</string>
    <string name="menu_title_easy">Easy</string>
    <string name="menu_title_hard">Hard</string>
    <string name="label_home">Home</string>
    <string name="label_item">Items</string>
    <string name="label_costume">Costumes</string>
    <string name="label_happiness">Happiness</string>
    <string name="label_settings">Settings</string>
    <string name="label_history">Recent History</string>
    <string name="label_random_box">Random Box</string>
    <string name="label_alchemy">Alchemy</string>
    <string name="label_divination">Divination</string>
    <string name="label_tutorial">Tutorial</string>
    <string name="label_application">Application</string>
    <string name="label_detail">Detail Kitten Settings</string>
    <string name="block_label_level">Level %d</string>
    <string name="block_label_level_max">Level %d (MAX)</string>
    <string name="block_label_configs">Kitten Configs</string>
    <string name="block_label_general">General</string>
    <string name="ads_title_default">Would you watch an ad to open the box?</string>
    <string name="ads_title_drum_1">B</string>
    <string name="ads_title_drum_2">om</string>
    <string name="ads_contents_default">Get an item randomly.\nYou can get a paid costume with a low chance.</string>
    <string name="ads_contents_unboxing">The box is being opened.</string>
    <string name="alchemy_title_default">Would you reconstruct an item with alchemy?</string>
    <string name="alchemy_title_concentrate">Meow.. meow.. meow meow..!</string>
    <string name="alchemy_title_bloom">Meow?!</string>
    <string name="alchemy_title_rotate">..zzZ</string>
    <string name="alchemy_contents_default">Deconstruct same ice creams up to 5.\nThe success rate depends on the number of materials.\n You can get a same-flavored cake if success.</string>
    <string name="alchemy_contents_concentrate">The alchemist is concentrating!</string>
    <string name="alchemy_contents_rotate">The alchemist fell a sleep..</string>
    <string name="divination_title_default">Would you predict fortune with divination?</string>
    <string name="divination_title_concentrate">Meow.. meow.. meow..</string>
    <string name="divination_title_eye_open">Meow..?</string>
    <string name="divination_title_rotate">Meow!</string>
    <string name="divination_contents_default">Get buff randomly.\nThe effect of the buff lasts until midnight.</string>
    <string name="divination_contents_concentrate">The seer is concentrating!</string>
    <string name="divination_contents_rotate">The crystal ball rolled away..</string>
    <string name="toast_flutter">You made my heart flutter for a while.. =3=</string>
    <string name="toast_error">An error occurred..</string>
    <string name="toast_error_load">Ad is still loading!</string>
    <string name="toast_error_internal">An error occurred on the server..</string>
    <string name="toast_error_request">An error occurred in requesting an ad..</string>
    <string name="toast_error_network">An error occurred on the network..</string>
    <string name="toast_error_no_fill">An error occurred on the ad inventory..</string>
    <string name="toast_try_again">Would you like to try again?</string>
    <string name="toast_try_later">Would you like to try again later?</string>
    <string name="toast_backup">Request data backup to Google Cloud!</string>
    <string name="toast_todo">It\'s due to be updated!</string>
    <string name="toast_unlock_costume_first">Unlock costumes first!</string>
    <string name="toast_lack_of_ticket">%d tickets are charged per game every day!</string>
    <string name="toast_need_alchemist">You need alchemist to use the philosopher\'s stone..</string>
    <string name="toast_need_alchemy_material">You don\'t have any items for alchemy..</string>
    <string name="toast_need_seer">You need seer to use crystal ball..</string>
    <string name="toast_divination_once">You can only use divination once a day..</string>
    <string name="history_title_item_get">Item Get</string>
    <string name="history_title_item_use">Item Use</string>
    <string name="history_title_item_update_reward">Update Reward</string>
    <string name="history_title_costume_get">Costume Get</string>
    <string name="history_title_level">Level Up</string>
    <string name="history_title_explore">Exploring Start</string>
    <string name="history_title_buff_get">Buff Get</string>
    <string name="history_contents_item_found">Found a(n) %s!</string>
    <string name="history_contents_item_used">Used a(n) %s!</string>
    <string name="history_contents_item_reward">Got a(n) %s item!</string>
    <string name="history_contents_costume_found">Unlocked the %s costume!</string>
    <string name="history_contents_costume_reward">Got the %s costume!</string>
    <string name="history_contents_level_up">%s reached %d level!</string>
    <string name="history_contents_explore">%s started her first exploring!</string>
    <string name="history_contents_buff_get_experience">Increased EXP gains!</string>
    <string name="history_contents_buff_get_item">Increased item get rate!</string>
    <string name="history_date">%s %d</string>
    <string name="history_date_today">Today</string>
    <string name="history_date_yesterday">Yesterday</string>
    <string name="history_time_am">%d:%02d AM</string>
    <string name="history_time_pm">%d:%02d PM</string>
    <string name="item_type_charm">Charm</string>
    <string name="item_type_toy">Toy</string>
    <string name="item_quantity">%d EA</string>
    <string name="item_title_ice_cream_cake">Ice Cream Cake</string>
    <string name="item_title_green_tea_ice_cream">Green Tea Ice Cream</string>
    <string name="item_title_chocolate_ice_cream">Chocolate Ice Cream</string>
    <string name="item_title_cherry_ice_cream">Cherry Ice Cream</string>
    <string name="item_title_melon_ice_cream">Melon Ice Cream</string>
    <string name="item_title_mint_ice_cream">Mint Ice Cream</string>
    <string name="item_title_green_tea_cake">Green Tea Cake</string>
    <string name="item_title_chocolate_cake">Chocolate Cake</string>
    <string name="item_title_cherry_cake">Cherry Cake</string>
    <string name="item_title_melon_cake">Melon Cake</string>
    <string name="item_title_mint_cake">Mint Cake</string>
    <string name="item_title_alchemy">Philosopher\'s Stone</string>
    <string name="item_title_crystal_ball">Crystal Ball</string>
    <string name="item_title_pleione_doll">Pleione Doll</string>
    <string name="item_title_scratcher">Scratcher</string>
    <string name="item_title_tower">Tower</string>
    <string name="item_contents_ice_cream_cake">Increases level by 1!</string>
    <string name="item_contents_green_tea_ice_cream">Increases EXP by 300!</string>
    <string name="item_contents_chocolate_ice_cream">Increases EXP by 200!</string>
    <string name="item_contents_cherry_ice_cream">Increases EXP by 100!</string>
    <string name="item_contents_melon_ice_cream">Increases EXP by 50!</string>
    <string name="item_contents_mint_ice_cream">Increases EXP by 30!</string>
    <string name="item_contents_green_tea_cake">Increases EXP by 50 %!</string>
    <string name="item_contents_chocolate_cake">Increases EXP by 30 %!</string>
    <string name="item_contents_cherry_cake">Increases EXP by 20 %!</string>
    <string name="item_contents_melon_cake">Increases EXP by 10 %!</string>
    <string name="item_contents_mint_cake">Increases EXP by 5 %!</string>
    <string name="item_contents_alchemy">Use alchemy to reconstruct an item!</string>
    <string name="item_contents_crystal_ball">Use divination to predict today\'s fortune!</string>
    <string name="item_contents_pleione_doll">15 % more EXP gained from items!</string>
    <string name="item_contents_scratcher">10 % more EXP gained from items!</string>
    <string name="item_contents_tower">10 % more items to find!</string>
    <string name="costume_title_default">Default</string>
    <string name="costume_title_pajamas">Pajamas</string>
    <string name="costume_title_sweater">Sweater</string>
    <string name="costume_title_shirts">Shirts</string>
    <string name="costume_title_blazer">Blazer</string>
    <string name="costume_title_uniform">Uniform</string>
    <string name="costume_title_hanbok">Hanbok</string>
    <string name="costume_title_fleece">Fleece</string>
    <string name="costume_title_hoodie">Hoodie</string>
    <string name="config_title_width_ratio">Wall Width Ratio</string>
    <string name="config_title_height_ratio">Wall Height Ratio</string>
    <string name="config_title_show_position">Vertical Position to Appear</string>
    <string name="config_title_jump_height">Jump Height</string>
    <string name="config_title_jump_distance">Jump Distance</string>
    <string name="config_title_animator_duration_scale">Animator Duration Scale</string>
    <string name="tutorial_title_happiness">Happiness has been newly added!</string>
    <string name="tutorial_contents_happiness">Happiness can be found at Home.</string>
</resources>