<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_items_all"
            android:background="?attr/selectableItemBackground"
            android:title="@string/menu_title_all"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/action_items_consumption"
            android:background="?attr/selectableItemBackground"
            android:title="@string/menu_title_consumption"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/action_items_charm"
            android:background="?attr/selectableItemBackground"
            android:title="@string/menu_title_charm"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/action_items_toy"
            android:background="?attr/selectableItemBackground"
            android:title="@string/menu_title_toy"
            app:showAsAction="ifRoom" />
    </group>

</menu>