<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_history_all"
            android:background="?attr/selectableItemBackground"
            android:title="@string/menu_title_all"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/action_history_item"
            android:background="?attr/selectableItemBackground"
            android:title="@string/menu_title_items"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/action_history_costume"
            android:background="?attr/selectableItemBackground"
            android:title="@string/menu_title_costumes"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/action_history_state"
            android:background="?attr/selectableItemBackground"
            android:title="@string/menu_title_state"
            app:showAsAction="ifRoom" />
    </group>

</menu>