<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingStart="@dimen/margin_default"
    android:paddingTop="@dimen/margin_default"
    android:paddingEnd="@dimen/margin_default"
    android:paddingBottom="@dimen/margin_default">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/config_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_round_stroke"
            android:orientation="vertical"
            android:paddingStart="@dimen/margin_small"
            android:paddingTop="@dimen/margin_large"
            android:paddingEnd="@dimen/margin_small"
            android:paddingBottom="@dimen/margin_large"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/setting_kitten_config"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default"
                android:text="@string/block_label_configs"
                android:textSize="@dimen/text_size_very_large"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_very_large"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginEnd="@dimen/margin_default"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_small"
                    android:text="@string/config_title_width_ratio" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/seek_value_settings_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_signature_gray"
                    android:textSize="@dimen/text_size_small"
                    tools:text="85 %" />
            </LinearLayout>

            <SeekBar
                android:id="@+id/seek_setting_1"
                style="@style/SeekBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_very_small" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_default"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginEnd="@dimen/margin_default"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_small"
                    android:text="@string/config_title_height_ratio" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/seek_value_settings_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_signature_gray"
                    android:textSize="@dimen/text_size_small"
                    tools:text="85 %" />
            </LinearLayout>

            <SeekBar
                android:id="@+id/seek_setting_2"
                style="@style/SeekBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_very_small" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_default"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginEnd="@dimen/margin_default"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_small"
                    android:text="@string/config_title_jump_height" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/seek_value_settings_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_signature_gray"
                    android:textSize="@dimen/text_size_small"
                    tools:text="85 %" />
            </LinearLayout>

            <SeekBar
                android:id="@+id/seek_setting_3"
                style="@style/SeekBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_very_small" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_default"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginEnd="@dimen/margin_default"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_small"
                    android:text="@string/config_title_jump_distance" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/seek_value_settings_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_signature_gray"
                    android:textSize="@dimen/text_size_small"
                    tools:text="85 %" />
            </LinearLayout>

            <SeekBar
                android:id="@+id/seek_setting_4"
                style="@style/SeekBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_very_small" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_default"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginEnd="@dimen/margin_default"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_small"
                    android:text="@string/config_title_show_position" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/seek_value_settings_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_signature_gray"
                    android:textSize="@dimen/text_size_small"
                    tools:text="85 %" />
            </LinearLayout>

            <SeekBar
                android:id="@+id/seek_setting_5"
                style="@style/SeekBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_very_small" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_default"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginEnd="@dimen/margin_default"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_small"
                    android:text="@string/config_title_animator_duration_scale" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/seek_value_settings_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_signature_gray"
                    android:textSize="@dimen/text_size_small"
                    tools:text="85 %" />
            </LinearLayout>

            <SeekBar
                android:id="@+id/seek_setting_6"
                style="@style/SeekBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_very_small" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            android:background="@drawable/background_round_stroke"
            android:orientation="vertical"
            android:paddingStart="@dimen/margin_default"
            android:paddingTop="@dimen/margin_large"
            android:paddingEnd="@dimen/margin_default"
            android:paddingBottom="@dimen/margin_default"
            app:layout_constraintTop_toBottomOf="@id/config_settings">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/block_label_general"
                android:layout_marginStart="@dimen/margin_small"
                android:textSize="@dimen/text_size_very_large"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_default"
                android:scrollbars="none" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>